Extend tests